apps/beamerstreamer/endpoints.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: beamerstreamer
  labels:
    app: beamerstreamer
subsets:
- addresses:
  - ip: 10.4.255.127
  ports:
  - name: web
    port: 8080
    protocol: TCP
