apps/beamerstreamer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beamerstreamer
  labels:
    app: beamerstreamer
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 8080
