apps/beamerstreamer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beamerstreamer
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: beamerstreamer.chaosdorf.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: beamerstreamer
            port:
              number: 80
  tls:
  - hosts:
    - beamerstreamer.chaosdorf.space
    secretName: ingress-tls
